--- a/README.rdoc
+++ b/README.rdoc
@@ -7,15 +7,20 @@ Things you may want to cover:
 
 * Ruby version
 
+  ruby 2.1.1p76
+
 * System dependencies
+	rails - 4.1.1
 
 * Configuration
 
 * Database creation
+	rake db:create
 
 * Database initialization
 
 * How to run the test suite
+	rake test
 
 * Services (job queues, cache servers, search engines, etc.)
 
