--- a/README.rdoc
+++ b/README.rdoc
@@ -39,4 +39,4 @@ Please feel free to use a different markup language if you do not plan to run
 5)cucumber testing
 6)check_health gem
 7)testing rspec
-8)
+8)master branch
